# Class-Registerer

./: CMakeLists.txt  README.md
demo/: Animal.cc  Animal.h  Cat.cc  Cat.h  main.cpp
inc/: ClassRegister.h
src/: ClassRegister.cc
